SubVersion: $Id$

Run './configure --enable-static=yes --enable-shared=no' for use with 
ValGrind. Run 'valgrind --tool=memcheck --leak-check=yes ./test'

To do:
	- tifiles_is_varname_tokenized
	- tifiles_tokenize_varname

Log:

- 04/06/2005, version 0.0.4: roms
	- added transcode function to API for future implementation
	- removed 'name' field of VarEntry: make confusion
	- changed 'var_name' into name and 'fld_name' into 'folder'

- 14/05/2005, version 0.0.3: roms
	- merged some types into a single type
	- common file handling API

- 10/04/2005, version 0.0.2: roms
	- rewritten TI8X+ FLASH support
	- fixed memory errors at:
		* test_tifiles_2.c:168
		* realloc in ti8x_file_read_flash
		* free in ti8x_content_free_flash
	- new valgrind check: no errors !

	Add TiGroup (*.tig) support which is a kind of file container.

- 26/03/2005, version 0.0.1: roms
	- error management left untouched
	- logging reworked (use glib)
	- a single public header with functions & defs, others are private
	- slightly fixed namespace sheme
	- use strong types such as TiCalcModel, ...
	- glib is used for logging (not very much for strings)
	- documentation system has been changed
	- functions pointers have been removed
	- library has been fully documented
	- decreased number of headers to include (1 or 3)
	- fixed tifiles_file_is_ti and argument passing to transcode functions
	- added fread_n_bytes adn fwrite_n_bytes which replaces fwrite_n_chars 
	- fixed many missing fclose() => file truncated...
	- fixed fsignature in TI8x support
	- checked with valgrind: few allocations errors with test_tifiles_2.c
	- added a new convenient function: tifiles_content_free_group
	- tifiles_ungroup_file now returns a list of files 
	  extracted from group file
	- fixed few memory allocation issues with ValGrind.
	
====[ Version II ]====

- 05/03/2005, version 0.6.3: roms
	Added gcc 4.0 -fvisibility flag support.
	
- 03/11/2004, version 0.6.2: roms
	Fixed and tested TIB file support (read only).
